@@ -53,6 +53,8 @@ $hostGroupTable->setHeader(array(
 	_('Info')
 ));
 
+$currentTime = time();
+
 foreach ($this->data['groups'] as $group) {
 	$hostsOutput = array();
 	$i = 0;
@@ -126,12 +128,21 @@ foreach ($this->data['groups'] as $group) {
 	// info, discovered item lifetime indicator
 	if ($group['flags'] == ZBX_FLAG_DISCOVERY_CREATED && $group['groupDiscovery']['ts_delete']) {
 		$info = new CDiv(SPACE, 'status_icon iconwarning');
-		$info->setHint(_s(
-			'The host group is not discovered anymore and will be deleted in %1$s (on %2$s at %3$s).',
-			zbx_date2age($group['groupDiscovery']['ts_delete']),
-			zbx_date2str(DATE_FORMAT, $group['groupDiscovery']['ts_delete']),
-			zbx_date2str(TIME_FORMAT, $group['groupDiscovery']['ts_delete'])
-		));
+
+		// Check if host group should've been deleted in the past.
+		if ($currentTime > $group['groupDiscovery']['ts_delete']) {
+			$info->setHint(_s(
+				'The host group is not discovered anymore and will be deleted the next time discovery rule is processed.'
+			));
+		}
+		else {
+			$info->setHint(_s(
+				'The host group is not discovered anymore and will be deleted in %1$s (on %2$s at %3$s).',
+				zbx_date2age($group['groupDiscovery']['ts_delete']),
+				zbx_date2str(DATE_FORMAT, $group['groupDiscovery']['ts_delete']),
+				zbx_date2str(TIME_FORMAT, $group['groupDiscovery']['ts_delete'])
+			));
+		}
 	}
 	else {
 		$info = '';
